<resources>
    <string name="app_name">Invi</string>
    <string name="register_text">Login With</string>
    <string name="login_button">Login</string>
    <string name="login_facebook">LogIn With Facebook</string>
    <string name="login_google">Continue With Google</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Forgot Password</string>
    <string name="login_text_view">Enter Email / Phone Number</string>
    <string name="reg_name">Name</string>
    <string name="reg_hint_name">Enter Name</string>
    <string name="reg_surname">Surname</string>
    <string name="reg_hint_surname">Enter SurName</string>
    <string name="reg_email">Email</string>
    <string name="reg_hint_email">Enter Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_hint_password">Enter Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="user_profile_photo">User Profile Photo</string>
    <string name="logout_button">Log Out</string>
    <string name="verify_button">Verify</string>
    <string name="reg_phone">Phone</string>
    <string name="reg_hint_phone">Enter Phone Number</string>
    <string name="facebook_app_id" translatable="false">853409325101910</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb853409325101910</string>
    <string name="google_client_id" translatable="false">617397433442-urgnv43j7ik4obmqvoemf1huiv0pcnl1.apps.googleusercontent.com</string>
    <string name="title_activity_info_page" translatable="false">activity_info_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_info_page_activity" translatable="false">info_page_activity</string>
    <string name="skip">Skip</string>
    <string name="country_code">Select Country Code</string>
    <string name="forgot_password">Reset Password</string>
    <string name="password_info">Password Info</string>
    <string name="password_generate">Password Generate</string>
    <string name="send_code">Send Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="generate_password">Generate Password</string>
    <string name="veirified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="user_profile">User Profile</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="empty_email">Enter an email address</string>
    <string name="email_sent">Email sent</string>
    <string name="required">Required</string>
    <string name="select_country">Select Country</string>
    <string name="login_canceled">Login Canceled</string>
    <string name="password_dont_match">Password Don\'t Match</string>
    <string name="password_dont_meet_requirements">Password doens\'t meet requirements</string>
    <string name="fill_in_requried_fields">Fill in required fields</string>
    <string name="delete_account">Delete Account</string>
    <string name="change">Change</string>
    <string name="display_name">Display Name</string>
    <string name="ok">Ok</string>
    <string name="unlink_google">Unlink Google</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="save">Save</string>
    <string name="password_conatins_name">Password cannot have your name</string>
    <string name="facebook_sign_infailed">Facebook Sign In Failed</string>
    <string name="phone_successfully_linked">Phone Successfully Linked</string>
    <string name="phone_already_registered">Phone Number Already Registerd</string>
    <string name="invalide_verification_code">Invalid Verification Code Entered</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="enable_phone_login">Enable Phone Login</string>
    <string name="verify_login_input">Enter a valid email or Phone Number</string>
    <string name="email_sent_info">If your are a registered user you should receive an email shortly</string>
    <string name="password_length">Password is greater than 8 characters</string>
    <string name="password_digit">Password contains at least 1 digit</string>
    <string name="password_lower_case">Password contains at least 2 Lower Case</string>
    <string name="password_upper_case">Password contains at least 2 Upper Case</string>
    <string name="password_special_char">Password contains at least 1 Special Char</string>
    <string name="unlink_facebook">Unlink Facebook</string>
    <string name="photo_update">Click To Change Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="social_platforms">Social Platforms</string>
    <string name="login_failed">Login Failed</string>
    <string name="reload">Reload</string>
    <string name="extras">Extras</string>
    <string name="email_registered">Email is already registered, login and link account or recover password</string>
    <string name="goodbye">We\'re sad to see you go \uD83D\uDE2D</string>
    <string name="delete_user_inform">Are you sure you want to delete your account ??</string>
    <string name="delete_reason_1">Don\'t use it enough</string>
    <string name="delete_reason_2">Too complicated</string>
    <string name="delete_reason_3">Doesn\'t suit my needs</string>
    <string name="delete_reason_4">Found a better app </string>
    <string name="delete_reason_other">Other</string>
    <string name="delete">Delete</string>
    <string name="signin_with_twitter">Sign In With Twitter</string>
    <string name="logout_twitter">Unlink Twitter</string>
    <string name="unlink">Unlink</string>
    <string name="twitter">Twitter</string>
    <string name="login_twitter">Continue With Twitter</string>
    <string name="unlink_twitter">Unlink Twitter</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Purchases</string>
    <string name="menu_slideshow">Rentals</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_scanner">Scanner</string>
    <string name="camera_permission_failed">Camera Permission Failed</string>
    <string name="try_again">Please Try Again</string>
    <string name="link_faebook">Link Facebook</string>
    <string name="link_twiiter">Link Twitter</string>
    <string name="communicate_menu_sec">Communicate</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="info">Info</string>
    <string name="about">Invi is a shopping platform which \nintegrate all the popular supermarkets\ninto one platform\n\nThis app was developed for the purpose\n of a semester project by\n\n• Paul Kinsella \n• Bartlomiej Mlynarkiewicz \n• Norbert Cholewka"</string>
    <string name="recent_purchase">Recent Transactions</string>
    <string name="view_all">View All</string>
    <string name="failed_to_verify_code">Failed to verify code</string>
    <string name="upload_user_image">Upload user image</string>
    <string name="photo_changed">Photo changed successfully</string>
    <string name="receipt">Receipts</string>
    <string name="price_check">Price Check</string>
    <string name="price">Price</string>
    <string name="item">Item</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="failed_log_in">Failed Log In</string>
    <string name="inccorect_phone_number">Incorrect Phone Number</string>
    <string name="to_many_requests">To many attempts, phone temporally blocked\n try again in few minutes</string>
    <string name="user_email">Address email</string>
    <string name="title_activity_maps">Maps</string>
    <string name="options">Options</string>
    <string name="google_maps">Maps</string>
    <string name="converions">Conversions</string>
    <string name="payments">Payments</string>
    <string name="no_items_in_cart">You have mo items in your cart</string>
    <string name="error_purchase_cart_items">Something went wrong accessing cart please try again</string>
    <string name="item_removed_from_cart">Item has been removed from cart</string>
    <string name="card">Card</string>
    <string name="card_logo">Card logo</string>
    <string name="account_info">Account Info</string>
    <string name="account_settings">Account Settings</string>
    <string name="user_buttons">User buttons</string>
    <string name="click_to_change_password">Click to change password</string>
    <string name="change_language">Change Language</string>
    <string name="change_currency">Change Currency</string>
    <string name="verify_identity">Verify Identity</string>
    <string name="current_currency">Current Currency</string>
    <string name="scan_card">Click to Scan Card</string>
    <string name="edit_card">Edit Card</string>
    <string name="add_card">Add Card</string>
    <string name="save_card">Save Card</string>
    <string name="empty_recycler">Click Add Card to Add your first payment</string>
    <string name="select_language">Select Langauge</string>
    <string name="link_google">Link Google</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_number">Card Number</string>
    <string name="delete_card">Delete Card</string>
    <string name="error_getting_searchitems">Error searching for items</string>
    <string name="resend_email">Resend</string>
    <string name="linked_social_platforms">Linked Social Accounts</string>
    <string name="enter_dob">Enter Date of Birth</string>
    <string name="dob_day">Day</string>
    <string name="dob_month">Month</string>
    <string name="dob_year">Year</string>
    <string name="offline_message">Invi Needs an Active Internet Connection\nCheck your Internet Settings</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_search">Search</string>
    <string name="no_items_in_rental">You have no items on rental</string>
    <string name="must_return">Item must be scanned back in at store</string>
    <string name="loading_items">Please wait loading items...</string>
    <string name="enter_confirm_password">Enter confirm Password</string>
    <string name="loading">Loading...</string>
    <string name="no_items">Empty Cart</string>
    <string name="no_items_msg">Sorry you have no items in the cart</string>
    <string name="no_receipts">No Receipts Found</string>
    <string name="error_getting_receipts">Error Getting receipts</string>
    <string name="opens">Opens</string>
    <string name="closes">Closes</string>
    <string name="other">Other</string>
    <string name="date">Date</string>
    <string name="payment_type">Type</string>
    <string name="no_transactions">No Transactions</string>
    <string name="pay">Pay</string>
    <string name="card_scan">Tap Card at the back to scan</string>
    <string name="incorrect_expiry_date">Incorrect Expiry Date</string>
    <string name="fill_in_fields">Please fill in details</string>
    <string name="converted">Converted :</string>
    <string name="cart_total">Cart Total :</string>
    <string name="balance">Balance</string>
    <string name="price_per_hr">Price Per</string>
    <string name="total">Total</string>
    <string name="qty">Qty</string>
</resources>