<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/purchase"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/renticon"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/receipts"
            android:icon="@drawable/receipt"
            android:title="@string/receipt"
            />
        <item
            android:id="@+id/maps"
            android:icon="@drawable/google_maps"
            android:title="@string/google_maps"
            />

        <item android:title="@string/settings">
            <menu>
                <item
                    android:id="@+id/nav_tools"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_tools" />
            </menu>
        </item>

        <item android:title="@string/communicate_menu_sec">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/logout"
                    android:title="@string/logout_button"
                    />
            </menu>
        </item>

    </group>



</menu>
