<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aluminati.inventory.fragments.recent.RecentFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_recent" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.aluminati.inventory.fragments.purchase.PurchaseFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_purchase" />

    <fragment
        android:id="@+id/nav_receipts"
        android:name="com.aluminati.inventory.fragments.receipt.ReceiptFragment"
        android:label="Receipts"
        tools:layout="@layout/fragment_receipt" />

    <fragment
        android:id="@+id/nav_rental"
        android:name="com.aluminati.inventory.fragments.rental.RentalFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_rental" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.aluminati.inventory.fragments.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />



    <fragment
        android:id="@+id/nav_send"
        android:name="com.aluminati.inventory.fragments.receipt.ReceiptFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_receipt" />

    <fragment
        android:id="@+id/nav_scanner"
        android:name="com.aluminati.inventory.fragments.scanner.ScannerFragment"
        android:label="@string/menu_scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/nav_payments"
        android:name="com.aluminati.inventory.payments.ui.PaymentsFrag"
        android:label="@string/payments"
        tools:layout="@layout/scan_card"
        />

    <fragment
        android:id="@+id/nav_conversions"
        android:name="com.aluminati.inventory.fragments.ui.currencyConverter.ui.CurrencyFrag"
        android:label="@string/converions"
        tools:layout="@layout/currencies"
        />

    <fragment
        android:id="@+id/payments_frag"
        android:name="com.aluminati.inventory.payments.ui.Card"
        android:label="@string/card"
        tools:layout="@layout/add_card"
        />

    <fragment
        android:id="@+id/social_platforms_frag"
        android:name="com.aluminati.inventory.userprofile.SocialPlatforms"
        android:label="@string/social_platforms"
        tools:layout="@layout/social_platforms"
        />

</navigation>