<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goodbye"
        android:layout_gravity="center"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_user_inform"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        />

    <RadioGroup
        android:id="@+id/delete_user_reasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >
        <RadioButton android:id="@+id/radio__reason_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_reason_1"
            />
        <RadioButton android:id="@+id/radio_reason_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_reason_2"
            />
        <RadioButton android:id="@+id/radio_reason_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_reason_3"
            />
        <RadioButton android:id="@+id/radio_reason_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_reason_4"
            />
        <RadioButton android:id="@+id/radio_reason_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_reason_other"
            />
    </RadioGroup>

    <EditText
        android:id="@+id/other_reason"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:enabled="false"
        />


    <com.ebanx.swipebtn.SwipeButton
        android:id="@+id/delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:button_background="@drawable/delete_user_selector_button"
        app:button_bottom_padding="20dp"
        app:button_left_padding="20dp"
        app:button_right_padding="20dp"
        app:button_top_padding="20dp"
        app:inner_text="@string/delete_account"
        app:inner_text_background="@drawable/google_selector"
        app:inner_text_bottom_padding="5dp"
        app:inner_text_left_padding="20dp"
        app:inner_text_color="@android:color/white"
        app:inner_text_size="20sp"
        app:inner_text_top_padding="5dp"
        />



</LinearLayout>