<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".register.RegisterActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:id="@+id/textView4"
            style="@style/registrationFields"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/reg_name"
            />

        <TextView
            android:id="@+id/name_required_view"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/required"
            style="@style/registrationRequiredText"
            />

        <EditText
            android:id="@+id/name_view"
            android:layout_row="1"
            android:layout_column="0"
            android:hint="@string/reg_hint_name"
            android:inputType="textPersonName"
            style="@style/registrationEditFields"
            />

    </GridLayout>



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >
        <TextView
            android:id="@+id/textView5"
            style="@style/registrationFields"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/reg_surname"
            />

        <TextView
            android:id="@+id/surname_required_view"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/required"
            style="@style/registrationRequiredText"
            />

        <EditText
            android:id="@+id/surname_view"
            android:layout_row="1"
            android:layout_column="0"
            android:hint="@string/reg_hint_surname"
            android:inputType="textPersonName"
            style="@style/registrationEditFields"
            android:enabled="false"
            />

    </GridLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textView6"
            style="@style/registrationFields"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/reg_email"
            />

        <TextView
            android:id="@+id/email_required_view"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/required"
            style="@style/registrationRequiredText"
            />

        <EditText
            android:id="@+id/email_view"
            android:layout_column="0"
            android:layout_row="1"
            android:hint="@string/reg_hint_email"
            android:inputType="textEmailAddress"
            android:enabled="false"
            style="@style/registrationEditFields"
            />

    </GridLayout>



    <fragment
        class="com.aluminati.inventory.login.authentication.password.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/password_fragment"
        />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        >

        <Button
            android:id="@+id/register_button"
            android:layout_width="318dp"
            android:layout_height="57dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonpositive"
            android:text="@string/register"
            android:textColor="@color/white_text"
            android:textAllCaps="false"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/cancel_registration"
            android:layout_width="318dp"
            android:layout_height="57dp"
            android:background="@drawable/buttonegative"
            android:text="@string/cancel"
            android:textColor="@color/white_text"
            android:textAllCaps="false"
            android:textSize="20sp"
            />

    </LinearLayout>



</LinearLayout>