<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_popup"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#722032"
    android:layout_margin="20dp"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/password_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password_length" />

        <TextView
            android:id="@+id/password_digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password_digit" />

        <TextView
            android:id="@+id/password_lower_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password_lower_case" />

        <TextView
            android:id="@+id/password_upper_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password_upper_case" />

        <TextView
            android:id="@+id/password_special_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password_special_char" />


    </LinearLayout>

            <Button
                android:id="@+id/password_check_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Ok"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                />

</LinearLayout>
