<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <Button
            android:id="@+id/account_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_info"
            android:background="@android:color/white"
            android:textAlignment="viewStart"
            android:drawableEnd="@drawable/arrow"
            android:textColor="@color/text_color"
            />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/social_platforms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social_platforms"
            android:background="@android:color/white"
            android:textAlignment="viewStart"
            android:drawableEnd="@drawable/arrow"
            android:textColor="@color/text_color"
            />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/account_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_settings"
            android:background="@android:color/white"
            android:textAlignment="viewStart"
            android:textColor="@color/text_color"
            android:drawableEnd="@drawable/arrow"
            />


    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:background="@android:color/white"
        android:textAlignment="viewStart"
        android:textColor="@color/text_color"
        android:drawableEnd="@drawable/arrow"
        />


    </LinearLayout>
